# Naughts-and-crosses

./: .gitignore  Cargo.toml  LICENSE.md  README.md
macos/: build_app.sh  build_app_sh
src/: game.rs  main.rs
