[package]
name = "naughts_and_crosses"
version = "0.1.0"
authors = ["Alex <https://github.com/Optimunn>"]
edition = "2021"

[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling

[dependencies]
piston_window = "0.132.0"
rand = "0.9.2"